# GHOST

./: .gitignore  API_Reference.md  LICENSE  LUSC_ghost_report.md  MANIFEST.in  README.md  TODO.md  architecture.md  build_all_wheels.sh  build_wheel.sh  cli.py  commands.md  fc_out.json  helper.ipynb  helper.py  how_to_use.md  limitations.md  new_architecture.md  new_workflow.docx  predict.py  pyproject.toml  requirements.txt  results.md  roadmap.md  rssp_helper.ipynb  setup.py  ssm_ip.pt  ssm_ip_v2.pt  test_fc.py  test_fc_out.txt  test_pavia_zeroshot.py  test_results.csv  train.py  train_rssp.py  training_log.csv  update.md  visualize.py
.github/workflows/: publish.yml
baseline_version1_results/: test_results.csv  training_log.csv
best_results/simple_best/: test_results.csv  training_log.csv
data/indian_pines/: indian_pines_read.py
datasets/: envi_reader.py  fits_reader.py  hdf5_reader.py  hyperspectral_dataset.py  indian_pines.py  pds3_reader.py
ghost/: __init__.py  cli.py  convert.py  losses.py  predict.py  train.py  train_rssp.py  visualize.py
ghost/configs/: indian_pines.yaml
ghost/data/: __init__.py
ghost/datasets/: pavia_university.py
indian_pines_finetuned_ignore/: training_log.csv
models/: decoder_2d.py  encoder_2d.py  hyperspectral_net.py  real_spectral_transformer.py  se_block.py  spectral_3d_block.py  spectral_ssm.py  spectral_transformer.py
preprocessing/: continuum_removal.py
rssp/: rssp_inference.py  rssp_trainer.py  sam_clustering.py  ssm_pretrain.py  sssr_router.py
tmp/: test_pds3.py
visualize/: utils.py
(+9 files in other folders)
