[build-system]
requires = ["setuptools>=68.0", "wheel", "cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ghost-hsi"
version = "0.1.2"
description = "GHOST: Generalizable Hyperspectral Observation & Segmentation Toolkit"
readme = "README.md"
license = {text = "Proprietary — All Rights Reserved"}
requires-python = ">=3.9"
authors = [
    {name = "Ishu"},
]
keywords = [
    "hyperspectral", "remote-sensing", "segmentation",
    "deep-learning", "pytorch", "earth-observation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "einops>=0.6.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/ishu-ghost/ghost-hsi"

[project.scripts]
ghost = "ghost.cli:main"

[tool.setuptools.packages.find]
include = ["ghost*"]

[tool.setuptools.package-data]
ghost = ["configs/*.yaml", "data/indian_pines/*.mat"]
